--- a/styles/style.css
+++ b/styles/style.css
@@ -69,6 +69,9 @@ End CSS Reset
 body{
     margin-top: 0px;
     background-color:wheat;
+    font-family: "Merriweather", serif;
+  font-weight: 300;
+  font-style: normal;
 }
 
 header,
@@ -78,9 +81,17 @@ footer {
 }
 
 header h1{
-    float: left;
+    font-size: 48px;
+    width:fit-content;
+    padding: 20px 0 0 0;
+    border-top: 4px solid #AC7849;
 }
 
+header h2{
+    font-size: 24px;    
+    padding: 20px 0 20px 0;
+    text-align: right;
+}
 header a {
     float: right;
     display:block;
@@ -88,6 +99,11 @@ header a {
     text-align: center;
     padding: 14px 16px;
     background-color: wheat;
+}
+
+a.active {
+    background-color:#AC7849 ;
+    color: black;
 }
 
 header a:hover {
@@ -101,4 +117,50 @@ header,footer,article {
 
 article {
     background-color: white;
+    padding-top: 10px;
+    padding-bottom: 10px;
+}
+
+article h1{
+    font-size: 32px;
+    color:#AC7849;
+    border-bottom: 2px solid #AC7849;
+   padding-top: 10px;
+   margin-bottom: 20px;
+   
+
+}
+
+article p{
+
+}
+
+footer{
+    font-size: 12px;
+    padding-top: 40px;
+}
+
+footer a {
+    float: right;
+    text-decoration: none;
+    padding: 0 20 0 20px;
+}
+
+footer a.active{
+    color: wheat;
+}
+
+footer a :hover {
+    color: black;
+}
+
+article h2{
+    text-align: center;
+    border-bottom: 2px solid black;
+   padding-top: 10px;
+   margin-bottom: 20px
+}
+
+article p{
+    font-size: 14px;
 }
