--- a/styles/style.css
+++ b/styles/style.css
@@ -127,12 +127,38 @@ article h1{
     border-bottom: 2px solid #AC7849;
    padding-top: 10px;
    margin-bottom: 20px;
-   
+
 
 }
 
 article p{
 
+}
+
+.row {
+    margin: 8px -16px;
+}
+
+.row,
+.row > .column{
+    padding: 8px;
+
+}
+
+.column {
+    float:left;
+    width:25%;
+}
+
+.row:after {
+    content: '';
+    display: table;
+    clear:both;
+}
+
+.content {
+    background-color:wheat;
+    padding: 10px;
 }
 
 footer{
@@ -164,3 +190,8 @@ article h2{
 article p{
     font-size: 14px;
 }
+
+article h3{
+    font-weight: bold;
+}
+
