--- a/styles/style.css
+++ b/styles/style.css
@@ -91,26 +91,34 @@ header h2{
     font-size: 24px;    
     padding: 20px 0 20px 0;
     text-align: right;
+    white-space: nowrap;
 }
-header a {
-    float: right;
-    display:block;
+
+nav {
+    display: flex;
+    justify-content: right;
+}
+
+nav a{
     color: chocolate;
     text-align: center;
     padding: 14px 16px;
     background-color: wheat;
 }
 
-a.active {
-    background-color:#AC7849 ;
+nav a.active{
+    background-color: #AC7849;
     color: black;
 }
 
-header a:hover {
+nav a:hover{
     background-color:darksalmon;
 }
 
-header,footer,article {
+header,
+nav,
+article,
+footer {
     padding-left: 12.5%;
     padding-right: 12.5%;
 }
@@ -131,8 +139,38 @@ article h1{
 
 }
 
-article p{
+article h2 {
+    text-align: center;
+    font-size: 24px;
+    color: #black;
+    border-bottom: 1.25px solid #black;
+    margin-bottom: 20px;
+}
 
+article h2 {
+    margin-top: 20px;
+}
+
+
+article p.dates {
+    float: right;
+}
+
+article h3 {
+    font-size: 20px;
+    padding-bottom: 5px;
+    text-transform: uppercase;
+}
+
+article h4 {
+    padding-bottom: 5px;
+    font-size: 18px;
+}
+
+article ul {
+    list-style: inside;
+    list-style-type: disc;
+    font-size: 15px;
 }
 
 .row {
@@ -183,8 +221,8 @@ footer a :hover {
 article h2{
     text-align: center;
     border-bottom: 2px solid black;
-   padding-top: 10px;
-   margin-bottom: 20px
+    padding-top: 10px;
+    margin-bottom: 20px
 }
 
 article p{
@@ -195,3 +233,79 @@ article h3{
     font-weight: bold;
 }
 
+footer a:hover {
+    color: #000000;
+}
+
+@media screen and (max-width: 900px) {
+    .column {
+        width: 50%;
+    }
+    
+    header a {
+        float: none;
+        display: flex;
+        flex-direction: column;
+    }
+}
+    
+    @media screen and (max-width: 600px) {
+        .column {
+            width: 100%;
+    }
+}
+
+footer a:hover {
+    color: #000000;
+}
+
+@media screen and (max-width: 900px) {
+    .column {
+        width: 50%;
+    }
+    
+    nav  {
+        justify-content: unset;
+        flex-direction: column;
+        padding: 0;
+    }
+}
+
+@media screen and (max-width: 600px) {
+    .column {
+        width: 100%;
+    }
+}
+
+
+input[type='text'],
+select,
+textarea {
+    width: 100%;
+    padding: 12px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+    margin-top: 6px;
+    margin-bottom: 16px;
+    resize: vertical;
+}
+
+input[type='submit'] {
+    background-color: #04aa6d;
+    color: white;
+    padding: 12px 20px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+input[type='submit']:hover {
+    background-color: #45a049;
+}
+
+.container {
+    border-radius: 5px;
+    background-color: #f2f2f2;
+    padding: 20px;
+}
